# L2-sequencer

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: api.rs  gossipper.rs  handlers.rs  lib.rs  main.rs  state.rs  types.rs
src/config/: consensus.rs  network.rs
src/consensus/: logic.rs  mod.rs  zrand.rs
src/crypto/: ecdsa.rs
src/state/: internal.rs  mod.rs  server.rs
tests/: integration.rs
tests/src/: main.rs
