[package]
name = "pord-sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = "0.13.3"
rand_core = "0.6.4"
prover = { git = "https://github.com/jonas089/PoRD" }
zk-logic = { git = "https://github.com/jonas089/PoRD" }
risc0-zkvm = { version = "0.21.0", default-features = false }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
colored = "2.1.0"
tokio = { version = "1.38", features = ["full"] }
#temporarily disabled
#jsonrpsee-http-client = "0.20.3"
jsonrpsee-core = "0.20.3"
anyhow = "1.0"
indicatif = "0.17.8"
axum = "0.7.5"
reqwest = "0.12.5"
